--- a/assets/css/visitlk.css
+++ b/assets/css/visitlk.css
@@ -1,9 +1,5 @@
-/*Now the styles*/
-* {
-    margin: 0;
-	padding: 0;
-}
-body {
+
+.accordian_body {
 	background: #ccc;
 	font-family: arial, verdana, tahoma;
 }
@@ -17,7 +13,7 @@ so total container width = 640 + 40*4 = 800px;
 default width = 800/5 = 160px;
 */
 
-.accordian {
+.accordian_body>.accordian {
 	width: 805px; height: 320px;
 	overflow: hidden;
 
@@ -29,13 +25,13 @@ default width = 800/5 = 160px;
 }
 
 /*A small hack to prevent flickering on some browsers*/
-.accordian ul {
+.accordian_body>.accordian>.ulclass {
 	width: 2000px;
 	/*This will give ample space to the last item to move
 	instead of falling down/flickering during hovers.*/
 }
 
-.accordian li {
+.accordian_body>.accordian>.ulclass>.liclass {
 	position: relative;
 	display: block;
 	width: 160px;
@@ -56,25 +52,25 @@ default width = 800/5 = 160px;
 }
 
 /*Reduce with of un-hovered elements*/
-.accordian ul:hover li {width: 40px;}
+.accordian_body>.accordian>.ulclass:hover>.liclass {width: 40px;}
 /*Lets apply hover effects now*/
 /*The LI hover style should override the UL hover style*/
-.accordian ul li:hover {width: 640px;}
+.accordian_body>.accordian>.ulclass>.liclass:hover {width: 640px;}
 
 
-.accordian li img {
+.accordian_body>.accordian>.liclass>.imgclass {
 	display: block;
 }
 
 /*Image title styles*/
-.image_title {
+.accordian_body>.accordian>.image_title {
 	background: rgba(0, 0, 0, 0.5);
 	position: absolute;
 	left: 0; bottom: 0;
   width: 640px;
 
 }
-.image_title a {
+.accordian_body>.accordian>.image_title>.aclass {
 	display: block;
 	color: #fff;
 	text-decoration: none;
